third_party/move/move-compiler-v2/tests/lambda-lifting/nested.lambda.exp

Diagnostics:
error: Currently, lambda expressions must explicitly declare `move` capture of free variables, except when appearing as an argument to an inline functioncall.
   ┌─ tests/lambda-lifting/nested.move:15:42
   │
15 │         map1(x, |y| (map2((y - c as u8), |y| y + (c as u8)) as u64))
   │                                          ^^^^^^^^^^^^^^^^^

error: Currently, lambda expressions must explicitly declare `move` capture of free variables, except when appearing as an argument to an inline functioncall.
   ┌─ tests/lambda-lifting/nested.move:15:17
   │
15 │         map1(x, |y| (map2((y - c as u8), |y| y + (c as u8)) as u64))
   │                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
